chore: 修复版本号

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>cn.mypandora</groupId>
     <artifactId>mydnd</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.1.RELEASE</version>
     <packaging>jar</packaging>
 
     <name>mydnd</name>
